@@ -135,6 +135,9 @@ Release 0.16.1 - 2008-03-13
     HADOOP-2915. Fixed FileSystem.CACHE so that a username is included
     in the cache key. (Tsz Wo (Nicholas), SZE via nigel)
 
+    HADOOP-2813. TestDU unit test uses its own directory to run its
+    sequence of tests.  (Mahadev Konar via dhruba)
+
 Release 0.16.0 - 2008-02-07
 
   INCOMPATIBLE CHANGES
